Ignore sample fungus
Ignore sample fungus

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ sysinfo.txt
 Jogabilijam3/Assets/FungusExamples/
 
 Jogabilijam3/Assets/FungusExamples\.meta
+
+Jogabilijam3/Assets/ScenesSamplesFungus\.meta
+
+Jogabilijam3/Assets/ScenesSamplesFungus/
